--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -769,6 +769,31 @@ tr.queue-item>td:first-child>a {
     padding-right: 10px;
 }
 
+.item-files-table tr .fileControls{
+    float:right;
+    display:none;
+}
+
+.item-files-table tr.files-sortable:hover .fileControls{
+    float:right;
+    display:block;
+    margin-left:5px;
+}
+
+.progress .progress-bar .fileDetails {
+    display:inline;
+    text-align: left;
+    margin-left: 70px;
+    line-height: 25px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    font-size: 12px;
+    color: #404040;
+    padding-right: 0px;
+}
+
 .progress strong {
     font-size: 13px;
 }
@@ -1623,6 +1648,10 @@ input[name="nzbURL"] {
 
 #modal-item-files .item-files-table .progress small {
     color: #727272 !important;
+}
+
+#modal-item-files .item-files-table tr.files-sortable:hover .progress small {
+    display:none;
 }
 
 #modal-item-files .item-files-table td {
