Corrections of Move To Top for filelists

--- a/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
+++ b/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
@@ -50,7 +50,8 @@ legend,
     color: white !important;
 }
 
-.hover-button {
+.hover-button,
+.fileControls a:hover {
     opacity: 0.7;
 }
 
@@ -81,7 +82,8 @@ legend,
 
 .max-speed-input-clear,
 .max-speed-input-clear:hover,
-.nav-tabs>li>a:hover {
+.nav-tabs>li>a:hover,
+.fileControls a {
     color: black;
 }
 
@@ -100,8 +102,6 @@ legend,
 
 .table-striped>tbody>tr:nth-child(odd)>td,
 .table>tbody>tr:nth-child(odd)>td,
-.table>tbody>tr:nth-child(odd).files-sortable>td .progress,
-.item-files-table>tbody>tr:nth-child(odd)>td .progress,
 .multioperations-selector,
 .pagination li.active span,
 .pagination li span:hover,
@@ -110,24 +110,9 @@ legend,
     background-color: #444444;
     color: #EBEBEB;
 }
-/*
-.table>tbody>tr:nth-child(even).files-sortable>td .progress .progress-bar .fileDetails{
-    color: #000000;
-}*/
-.table.item-files-table>tbody>tr>td .progress .progress-bar .fileDetails {
-	color: #000000;
-}
-
-/*
-.table.item-files-table>tbody>tr:nth-child(odd).files-sortable>td .progress .progress-bar .fileDetails {
-    color: #000000;	
-}
-*/
 
 .table-striped>tbody>tr:nth-child(even)>td,
 .table>tbody>tr:nth-child(even)>td,
-.table>tbody>tr:nth-child(even).files-sortable>td .progress,
-.item-files-table>tbody>tr:nth-child(even)>td .progress,
 .table th,
 .pagination li span,
 .pagination>.disabled>span,
