--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -131,6 +131,11 @@
                         <span class="desc">$T('explain-auto_sort')</span>
                     </div>
                     <div class="field-pair">
+                        <label class="config" for="direct_unpack">$T('opt-direct_unpack')</label>
+                        <input type="checkbox" name="direct_unpack" id="direct_unpack" value="1" <!--#if int($direct_unpack) > 0 then 'checked="checked"' else ""#--> />
+                        <span class="desc">$T('explain-direct_unpack')</span>
+                    </div>
+                    <div class="field-pair">
                         <button class="btn btn-default saveButton"><span class="glyphicon glyphicon-ok"></span> $T('button-saveChanges')</button>
                         <button class="btn btn-default restoreDefaults"><span class="glyphicon glyphicon-asterisk"></span> $T('button-restoreDefaults')</button>
                     </div>
