Remove Audio/Video quality rating icons from Queue

--- a/interfaces/Glitter/templates/include_history.tmpl
+++ b/interfaces/Glitter/templates/include_history.tmpl
@@ -47,7 +47,7 @@
 
                     <!-- ko if: historyStatus.has_rating -->
                     <div class="dropdown history-ratings">
-                        <a href="#" class="name-ratings hover-button" data-toggle="dropdown" onclick="keepOpen(this)">
+                        <a href="#" class="name-icons hover-button" data-toggle="dropdown" onclick="keepOpen(this)">
                             <span class="glyphicon glyphicon-facetime-video"></span> <span data-bind="text: historyStatus.rating_avg_video"></span>
                             <span class="glyphicon glyphicon-volume-up"></span> <span data-bind="text: historyStatus.rating_avg_audio"></span>
                         </a>
