--- a/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
+++ b/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
@@ -177,7 +177,7 @@ tbody .caret {
     color: #D6D6D6;
 }
 
-td.name .name-ratings span,
+td.name .name-icons span,
 .navbar-nav .open .dropdown-menu>li>a,
 .dropdown-header,
 #modal-help small,
