--- a/interfaces/Glitter/templates/include_queue.tmpl
+++ b/interfaces/Glitter/templates/include_queue.tmpl
@@ -95,7 +95,7 @@
                             <span data-bind="text: password"></span>
                         </small>
                         <!-- /ko -->
-                        <div class="name-icons hover-button" data-bind="visible: direct_unpack">
+                        <div class="name-icons direct-unpack hover-button" data-bind="visible: direct_unpack">
                             <span class="glyphicon glyphicon-compressed "></span> <span data-bind="text: direct_unpack">5</span>
                         </div>
                     </div>
