Show DirectUnpack progress the same as Unpack progress: xx/xx

--- a/interfaces/Glitter/templates/include_queue.tmpl
+++ b/interfaces/Glitter/templates/include_queue.tmpl
@@ -96,7 +96,7 @@
                         </small>
                         <!-- /ko -->
                         <div class="name-icons direct-unpack hover-button" data-bind="visible: direct_unpack">
-                            <span class="glyphicon glyphicon-compressed "></span> <span data-bind="text: direct_unpack">5</span>
+                            <span class="glyphicon glyphicon-compressed"></span> <span data-bind="text: direct_unpack"></span>
                         </div>
                     </div>
                     <form data-bind="submit: editingNameSubmit">
