Add Retry All Failed button to Glitter

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -62,6 +62,7 @@
             glitterTranslate.repair = "$T('explain-Repair')".replace(/<br \/>/g, "\n").replace(/&quot;/g,'"');
             glitterTranslate.removeDown = "$T('Glitter-confirmClearDownloads')";
             glitterTranslate.removeDow1 = "$T('Glitter-confirmClear1Download')";
+            glitterTranslate.retryAll = "$T('link-retryAll')?";
             glitterTranslate.encrypted = "$T('Glitter-encrypted')";
             glitterTranslate.duplicate = "$T('Glitter-duplicate')";
             glitterTranslate.tooLarge = "$T('Glitter-tooLarge')";
