Show vote up/down instead of Video/Audio score

--- a/interfaces/Glitter/templates/include_history.tmpl
+++ b/interfaces/Glitter/templates/include_history.tmpl
@@ -48,8 +48,8 @@
                     <!-- ko if: historyStatus.has_rating -->
                     <div class="dropdown history-ratings">
                         <a href="#" class="name-icons hover-button" data-toggle="dropdown" onclick="keepOpen(this)">
-                            <span class="glyphicon glyphicon-facetime-video"></span> <span data-bind="text: historyStatus.rating_avg_video"></span>
-                            <span class="glyphicon glyphicon-volume-up"></span> <span data-bind="text: historyStatus.rating_avg_audio"></span>
+                            <span class="glyphicon glyphicon-thumbs-up"></span> <span data-bind="text: historyStatus.rating_avg_vote_up"></span>
+                            <span class="glyphicon glyphicon-thumbs-down"></span> <span data-bind="text: historyStatus.rating_avg_vote_down"></span>
                         </a>
                         <ul class="dropdown-menu history-ratings-menu">
                             <li>
