Add midnight auto history-purge and modify texts

--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -226,7 +226,7 @@
                             <option value="-1">$T('history_retention-none')</option>
                         </select>
                         <input type="number" id="history_retention_number" name="history_retention_number" min="1">
-                        <span class="desc">$T('explain-history_retention')</span>
+                        <span class="desc">$T('explain-history_retention').replace('. ', '.<br/>')</span>
                     </div>
 
                     <div class="field-pair">
